# Continuous-Beam-Solver

./: .gitignore  README.md  Risolutore Trave.ipynb  environment.yml  main.py  main_jupyter.ipynb  main_streamlit.py  maxs_mins.py  plotting.py  pyproject.toml  requirements.txt  solver.py  tables.py  testt.py  utils.py
OLD/: Risolutore Trave - SymPy.ipynb
OLD/imgExportSage/: ULS_ptot.sobj
continuous_beam_solver/: __init__.py  global_variables.py  internal_forces.py  maxs_mins.py  plotting.py  solver.py  span_beam.py  tables.py
solver/: maxs_mins.py  solver.py  tables.py
