[tool.poetry]
name = "continuous-beam-solver"
version = "0.2.0"
description = "Solve a continuos beam combining max and min loads"
authors = ["Nicola Meoli <46779155+sononicola@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "continuous_beam_solver"}]

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.9"
numpy = "^1.24.2"
pandas = "^1.4.0"
matplotlib = "^3.5.1"
SciencePlots = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
streamlit = "1.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
