[tool.poetry]
name = "continuous-beam-solver"
version = "0.3.0"
description = "Solve a continuos beam combining max and min loads"
authors = ["Nicola Meoli <46779155+sononicola@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "continuous_beam_solver"}]

[tool.poetry.dependencies]
python = "^3.11"
sympy = "^1.12"
numpy = "^1.25.2"
pandas = "^1.5.3"
matplotlib = "^3.7.2"
SciencePlots = "^2.0.1"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
streamlit = "1.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
